'Adding jwt'